--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "mdb-react-ui-kit": "^7.2.0",
@@ -18,7 +19,8 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
-    "react-loading-skeleton": "^3.4.0"
+    "react-loading-skeleton": "^3.4.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
